# C_CPP_projects

C++_ex1_big_integer/: CMakeLists.txt  Makefile  big_integer.cpp  big_integer.h  ex1.tar  main.cpp  my_set.cpp  my_set.h  my_set_tester.cpp  testint  testset
C++_ex1_big_integer/CodeStyleExample/: Point.cpp  Point.h
C++_ex1_big_integer/LastAssignment/: CMakeLists.txt  big_int_tester.cpp  ex1.tar  my_set.cpp  my_set.h  my_set_tester.cpp  testint  testset
C++_ex2_ikea_app/: CMakeLists.txt  Makefile  README  ex2.tar  ikea  ikea.cpp  my  sF  sF~  school  school_ikea  tests.py
C++_ex2_ikea_app/tests-cpp-ex2/: Setup.json  Version 8.txt
C++_ex3_my_set/: CMakeLists.txt  Makefile  Makefile~  ex3.tar  my_set.h  my_set.hpp  testset
C_ex1_cos_sin_caesar_cipher/: CMakeLists.txt  encrypt  encrypt.c  ex1.tar  my_cos  my_cos.c  my_sin.c
C_ex2_battleship_game/: CMakeLists.txt  battleships.c  battleships.h  battleships_game.c  ex2.tar  makefile
C_ex3_heatmap_calculator/: CMakeLists.txt  Makefile  ex3.tar  my_input.txt  reader  reader.c
C_ex3_heatmap_calculator/Tests/: calculator.c  ex3.tar  my_reader  reader.c  tests.py
C_ex3_heatmap_calculator/test_files/: temp_shit
OS_ex1_trap_virtulisation/: CMakeLists.txt  Makefile  README  osm  osm.cpp  osm.h
OS_ex2_user_level_threads/: CMakeLists.txt  Makefile  README  ThreadDescriptor.cpp  ThreadDescriptor.h  main.cpp  uthreads.cpp  uthreads.h
OS_ex3_multithreading_MapReduce/: CMakeLists.txt  MapReduceFramework.cpp  README
OS_ex4_hierarchical_page_tables/: CMakeLists.txt  Makefile  README  VirtualMemory.cpp  VirtualMemory.h
(+308 files in other folders)
